--- a/index.html
+++ b/index.html
@@ -3,28 +3,46 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Kusela Qinisile | WDD 130</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kusela's WDD130 Homepage</title>
+    <meta name="description" content="Kusela Qinisile - WDD 130 course homepage.">
+    <meta name="author" content="Kusela Qinisile">
+
+    <link rel="stylesheet" href="Styles/Styles.css">
 </head>
 
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr">Rafting Website</a>
+            <a href="wwr/">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">white Water Rafting Siteplan</a>
         </nav>
     </header>
     <main>
-        <h1>Kusela Qinisile |WDD 130</h1>
+        <h1>Kusela Qinisile | WDD130</h1>
         <img src="images/profile.jpg" alt="Hello my name is Kusela Qinisile" width="200">
-        <p>Hello! My name is Kusela Qinisile and I am from South Africa.I love fishing and spending time with family.I
-            am currently working as a fitness coach to help kids in my community to stay healthy and stay out of drugs.I
-            also enjoy raeding as a hobbie.</p>
+        <p>Hello! My nanme is Kusela Qinisile and I am from Johhanesburg,South africa. I enjoy playing sports and
+            exercing. Being active keeps me healthy and fresh.I am currently studying with BYU Pathway to grow my
+            gromming skills and become a sofware engineer. I love serving in the church too, it is my way of staying
+            obidient and keeping my covenants.
+        <main>
 
-    </main>
-    <footer>
-        <p>@2025 Kusela Qinisile, South Africa</p>
-    </footer>
+            <aside>
+                <h2>Johannesburg</h2>
+                <img src="images/johannesburg-768x576.jpg" alt="Johannesburg cbd">
+                <p>"Johannesburg, often called "Joburg" or the "City of Gold," is a large, vibrant city in South
+                    Africa's Gauteng province,
+                    known for its economic strength and rich history. It's a major center for mining, finance, and
+                    industry, playing a
+                    crucial role in both the South African and sub-Saharan African economies. Despite its modern
+                    infrastructure and global
+                    connections, Johannesburg also reflects the country's complex past, with stark contrasts between
+                    wealth and poverty, and
+                    a history shaped by gold rushes and apartheid."</p>
+            </aside>
+            <footer>
+                <p>@2025 Kusela Qinisile Johannesburg, South Africa</p>
 </body>
 
 </html>
