--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Kusela Qinisile - WDD 130 course homepage.">
     <meta name="author" content="Kusela Qinisile">
 
-    <link rel="stylesheet" href="Styles/Styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
